# WhichIsTheRealOne-on-Haskell

./: .gitignore  README.md  WhichIsTheTruth.cabal
src/: Main.hs
