name:           WhichIsTheTruth
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         psi

executable WhichIsTheTruth
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   JuicyPixels,
                   bytestring,
                   filepath,
                   temporary,
                   directory
  ghc-options:     -Wall

